<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_0099ff"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:layout_marginBottom="30dp"
            android:paddingRight="50dp"
            android:textColor="@android:color/white"
            android:text="@string/text_welcome"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_auth_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="18dp"
            android:textColorHint="@color/color_b9ffffff">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_auth_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_tiet_auth_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minLines="1"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_auth_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="18dp"
            android:textColorHint="@color/color_b9ffffff">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_auth_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_tiet_auth_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_auth_sign"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/text_btn_auth_sign"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>

</ScrollView>

